--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
       <button class="btn btn-primary mx-auto mt-3">Draw New Card</button>
     </div>
     <div class="container-fluid d-flex justify-content-center">
-      <div class="playing-card mt-5 d-flex flex-column justify-content-between">
+      <div class="playing-card mt-5 me-3 d-flex flex-column justify-content-between">
         <div class="top-row row mt-3">
           <div class="col-1"></div>
           <div class="col-2 d-flex">
@@ -41,6 +41,9 @@
           </div>
           <div class="col-1"></div>
         </div>
+      </div>
+      <div class="playing-card mt-5">
+        <img src="./assets/img/playing-card.jpg" alt="turquoise geometric pattern for the back of a playing card">
       </div>
     </div>
 
