--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
         </div>
       </div>
       <div class="playing-card mt-5">
-        <img src="./assets/img/playing-card.jpg" alt="turquoise geometric pattern for the back of a playing card">
+        <img src="./assets/img/playing-card.png" alt="turquoise geometric pattern for the back of a playing card">
       </div>
     </div>
 
