--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
         <div class="bottom-row row mb-3">
           <div class="col-9"></div>
           <div class="col-2 d-flex">
-            <span class="m-auto bottom-suit value suit">*</span>
+            <span class="m-auto bottom-suit value suit">♠</span>
           </div>
           <div class="col-1"></div>
         </div>
