--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
   </head>
   <body class="bg-success">
     <div class="d-flex">
-      <button id="draw-button" class="btn btn-primary mx-auto mt-3">Draw New Card</button>
+      <button class="btn btn-primary mx-auto mt-3">Draw New Card</button>
     </div>
     <div class="container-fluid d-flex justify-content-center">
       <div class="playing-card mt-5 me-3 d-flex flex-column justify-content-between">
@@ -42,7 +42,7 @@
           <div class="col-1"></div>
         </div>
       </div>
-      <div class="playing-card mt-5">
+      <div id="draw-button" class="playing-card mt-5">
         <img src="./assets/img/playing-card.png" alt="turquoise geometric pattern for the back of a playing card">
       </div>
     </div>
