worked on JS and restructured HTML lists

--- a/src/index.html
+++ b/src/index.html
@@ -51,22 +51,18 @@
         />
       </div>
     </div>
-    <ul class="row list-inline">
-      <!-- Foundations piles -->
-      <li class="col-1 list-inline-item">A♦</li>
-      <li class="col-1 list-inline-item">A♥</li>
-      <li class="col-1 list-inline-item">A♠</li>
-      <li class="col-1 list-inline-item">A♣</li>
-
-      <!-- Spacer -->
-      <li class="col-1"> </li>
-
-      <!-- Tableau piles -->
-      <li class="col-1 list-inline-item">K♠</li>
-      <li class="col-1 list-inline-item">K♠</li>
-      <li class="col-1 list-inline-item">K♠</li>
-      <li class="col-1 list-inline-item">K♠</li>
-      <li class="col-1 list-inline-item">K♠</li>
+    <ul id="foundations-piles" class="row list-inline">
+      <li class="card-pile col-1 list-inline-item">A <div class="suit">♦</div> </li>
+      <li class="card-pile col-1 list-inline-item">A♥</li>
+      <li class="card-pile col-1 list-inline-item">A♠</li>
+      <li class="card-pile col-1 list-inline-item">A♣</li>
+    </ul>
+    <ul id="tableau-piles" class="row list-inline">
+      <li class="card-pile col-1 list-inline-item card-value">K♠</li>
+      <li class="card-pile col-1 list-inline-item">K♠</li>
+      <li class="card-pile col-1 list-inline-item">K♠</li>
+      <li class="card-pile col-1 list-inline-item">K♠</li>
+      <li class="card-pile col-1 list-inline-item">K♠</li>
     </ul>
 
     <!-- Do not delete this script tag, this is what connects your HTML with the Javascript code -->
