JS code for displaying card piles (top card shown only)

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
       crossorigin="anonymous"
     />
   </head>
-  <body class="bg-success">
+  <body class="bg-success p-5">
     <div class="d-flex">
       <button class="btn btn-primary mx-auto mt-3">Draw New Card</button>
     </div>
@@ -51,18 +51,54 @@
         />
       </div>
     </div>
-    <ul id="foundations-piles" class="row list-inline">
-      <li class="card-pile col-1 list-inline-item">A <div class="suit">♦</div> </li>
-      <li class="card-pile col-1 list-inline-item">A♥</li>
-      <li class="card-pile col-1 list-inline-item">A♠</li>
-      <li class="card-pile col-1 list-inline-item">A♣</li>
+
+    <ul id="foundations" class="row list-inline mt-5">
+      <li class="list-inline-item col-1">
+        <div class="card-pile-value">A</div>
+        <div class="card-pile-suit">♦</div>
+      </li>
+      <li class="list-inline-item col-1">
+        <div class="card-pile-value">A</div>
+        <div class="card-pile-suit">♦</div>
+      </li>
+      <li class="list-inline-item col-1">
+        <div class="card-pile-value">A</div>
+        <div class="card-pile-suit">♦</div>
+      </li>
+      <li class="list-inline-item col-1">
+        <div class="card-pile-value">A</div>
+        <div class="card-pile-suit">♦</div>
+      </li>
     </ul>
-    <ul id="tableau-piles" class="row list-inline">
-      <li class="card-pile col-1 list-inline-item card-value">K♠</li>
-      <li class="card-pile col-1 list-inline-item">K♠</li>
-      <li class="card-pile col-1 list-inline-item">K♠</li>
-      <li class="card-pile col-1 list-inline-item">K♠</li>
-      <li class="card-pile col-1 list-inline-item">K♠</li>
+    <ul id="tableau" class="row list-inline mt-5">
+      <li class="list-inline-item col-1">
+        <div class="card-pile-value">A</div>
+        <div class="card-pile-suit">♦</div>
+      </li>
+      <li class="list-inline-item col-1">
+        <div class="card-pile-value">A</div>
+        <div class="card-pile-suit">♦</div>
+      </li>
+      <li class="list-inline-item col-1">
+        <div class="card-pile-value">A</div>
+        <div class="card-pile-suit">♦</div>
+      </li>
+      <li class="list-inline-item col-1">
+        <div class="card-pile-value">A</div>
+        <div class="card-pile-suit">♦</div>
+      </li>
+      <li class="list-inline-item col-1">
+        <div class="card-pile-value">A</div>
+        <div class="card-pile-suit">♦</div>
+      </li>
+      <li class="list-inline-item col-1">
+        <div class="card-pile-value">A</div>
+        <div class="card-pile-suit">♦</div>
+      </li>
+      <li class="list-inline-item col-1">
+        <div class="card-pile-value">A</div>
+        <div class="card-pile-suit">♦</div>
+      </li>
     </ul>
 
     <!-- Do not delete this script tag, this is what connects your HTML with the Javascript code -->
