--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
       crossorigin="anonymous"
     />
   </head>
-  <body class="bg-success p-5">
+  <body class="bg-success">
     <div class="d-flex">
       <button class="btn btn-primary mx-auto mt-3">Draw New Card</button>
     </div>
@@ -52,7 +52,7 @@
       </div>
     </div>
 
-    <ul id="foundations" class="row list-inline mt-5">
+    <ul id="foundations" class="row list-inline mt-5 px-5">
       <li class="list-inline-item col-1">
         <div class="card-pile-value">A</div>
         <div class="card-pile-suit">♦</div>
@@ -70,11 +70,7 @@
         <div class="card-pile-suit">♦</div>
       </li>
     </ul>
-    <ul id="tableau" class="row list-inline mt-5">
-      <li class="list-inline-item col-1">
-        <div class="card-pile-value">A</div>
-        <div class="card-pile-suit">♦</div>
-      </li>
+    <ul id="tableau" class="row list-inline mt-5 px-5">
       <li class="list-inline-item col-1">
         <div class="card-pile-value">A</div>
         <div class="card-pile-suit">♦</div>
