added starting logic for showing selected card

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
     </div>
     <div class="container-fluid d-flex justify-content-center">
       <div
+        id="drawn-card"
         class="playing-card mt-5 me-3 d-flex flex-column justify-content-between"
       >
         <div class="top-row row mt-3">
@@ -53,45 +54,45 @@
     </div>
 
     <ul id="foundations" class="row list-inline mt-5 px-5">
-      <li class="list-inline-item col-1">
+      <li id="foundations-1" class="list-inline-item col-1">
         <div class="card-pile-value">A</div>
         <div class="card-pile-suit">♦</div>
       </li>
-      <li class="list-inline-item col-1">
+      <li id="foundations-2" class="list-inline-item col-1">
         <div class="card-pile-value">A</div>
         <div class="card-pile-suit">♦</div>
       </li>
-      <li class="list-inline-item col-1">
+      <li id="foundations-3" class="list-inline-item col-1">
         <div class="card-pile-value">A</div>
         <div class="card-pile-suit">♦</div>
       </li>
-      <li class="list-inline-item col-1">
+      <li id="foundations-4" class="list-inline-item col-1">
         <div class="card-pile-value">A</div>
         <div class="card-pile-suit">♦</div>
       </li>
     </ul>
     <ul id="tableau" class="row list-inline mt-5 px-5">
-      <li class="list-inline-item col-1">
+      <li id="tableau-1" class="list-inline-item col-1">
         <div class="card-pile-value">A</div>
         <div class="card-pile-suit">♦</div>
       </li>
-      <li class="list-inline-item col-1">
+      <li id="table-2" class="list-inline-item col-1">
         <div class="card-pile-value">A</div>
         <div class="card-pile-suit">♦</div>
       </li>
-      <li class="list-inline-item col-1">
+      <li id="tableau-3" class="list-inline-item col-1">
         <div class="card-pile-value">A</div>
         <div class="card-pile-suit">♦</div>
       </li>
-      <li class="list-inline-item col-1">
+      <li id="tableau-4" class="list-inline-item col-1">
         <div class="card-pile-value">A</div>
         <div class="card-pile-suit">♦</div>
       </li>
-      <li class="list-inline-item col-1">
+      <li id="tableau-5" class="list-inline-item col-1">
         <div class="card-pile-value">A</div>
         <div class="card-pile-suit">♦</div>
       </li>
-      <li class="list-inline-item col-1">
+      <li id="tableau-6" class="list-inline-item col-1">
         <div class="card-pile-value">A</div>
         <div class="card-pile-suit">♦</div>
       </li>
