Fix tableau cards not being selected
I mistakenly had the start of the id being set to "foundations-" even in the tableau logic

--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
         <div class="card-pile-value">A</div>
         <div class="card-pile-suit">♦</div>
       </li>
-      <li id="table-2" class="list-inline-item col-1">
+      <li id="tableau-2" class="list-inline-item col-1">
         <div class="card-pile-value">A</div>
         <div class="card-pile-suit">♦</div>
       </li>
