--- a/src/index.html
+++ b/src/index.html
@@ -15,13 +15,14 @@
     />
   </head>
   <body class="bg-success">
-    <div class="d-flex">
-      <button class="btn btn-primary mx-auto mt-3">Draw New Card</button>
-    </div>
+    <h1 class="pt-5 text-center text-light">Random Two-Row Solitaire</h1>
+    <h2><strong>Click the face-down pile to draw</strong> a card.</h2>
+    <h2><strong>Click a card to select</strong> it.</h2>
+    <h2>Hover over and press <strong>spacebar to move</strong> the selected card there.</h2>
     <div class="container-fluid d-flex justify-content-center">
       <div
         id="drawn-card"
-        class="playing-card mt-5 me-3 d-flex flex-column justify-content-between"
+        class="playing-card me-3 d-flex flex-column justify-content-between"
       >
         <div class="top-row row mt-3">
           <div class="col-1"></div>
@@ -45,7 +46,7 @@
           <div class="col-1"></div>
         </div>
       </div>
-      <div id="draw-button" class="playing-card mt-5">
+      <div id="draw-button" class="playing-card">
         <img
           src="./assets/img/playing-card.png"
           alt="turquoise geometric pattern for the back of a playing card"
@@ -53,7 +54,7 @@
       </div>
     </div>
 
-    <ul id="foundations" class="row list-inline mt-5 px-5">
+    <ul id="foundations" class="row list-inline mt-4 px-5">
       <li id="foundations-1" class="list-inline-item col-1">
         <div class="card-pile-value">A</div>
         <div class="card-pile-suit">♦</div>
@@ -71,7 +72,7 @@
         <div class="card-pile-suit">♦</div>
       </li>
     </ul>
-    <ul id="tableau" class="row list-inline mt-5 px-5">
+    <ul id="tableau" class="row list-inline mt-4 px-5">
       <li id="tableau-1" class="list-inline-item col-1">
         <div class="card-pile-value">A</div>
         <div class="card-pile-suit">♦</div>
@@ -97,6 +98,27 @@
         <div class="card-pile-suit">♦</div>
       </li>
     </ul>
+    <p>
+      <strong
+        >Every card is random. You're not limited to a single deck!</strong
+      >
+      However, you can only see the topmost card in each pile. And when you pick
+      it up -- the card underneath will also be completely random!
+    </p>
+    <p>
+      So be careful, because if you pick up one of the cards in the
+      "foundations" piles (the piles that start with aces), you might lose your
+      progress!
+    </p>
+    <p>
+      Otherwise, normal Solitaire rules for stacking apply. Put the next highest
+      card in order of the same suit on top of a foundations pile. Put the next
+      lowest card of the opposite color on top of one of the "tableau" piles
+      (the lower row of piles). Move cards between piles, but remember that the
+      one underneath will be random.
+    </p>
+    <p><strong>How to move a card:</strong> Select a card and it will have a red border around it. HOVER OVER the card you want to move it to and press the spacebar key to move it there, if it can.</p>
+    <p><strong>Point system:</strong> You start with 10 points. Minus 1 every time you turn over the next pile in the deck. Plus 5 every time you make a correct move.</p>
 
     <!-- Do not delete this script tag, this is what connects your HTML with the Javascript code -->
     <script type="module" src="/app.js"></script>
