Experiment with code that could move one card onto another, unsuccessful

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <h1 class="pt-5 text-center text-light">Random Two-Row Solitaire</h1>
     <h2><strong>Click the face-down pile to draw</strong> a card.</h2>
     <h2><strong>Click a card to select</strong> it.</h2>
-    <h2>Hover over and press <strong>spacebar to move</strong> the selected card there.</h2>
+    <h2><strong>Click another card</strong> to move the first card there.</h2>
     <div class="container-fluid d-flex justify-content-center">
       <div
         id="drawn-card"
@@ -117,7 +117,7 @@
       (the lower row of piles). Move cards between piles, but remember that the
       one underneath will be random.
     </p>
-    <p><strong>How to move a card:</strong> Select a card and it will have a red border around it. HOVER OVER the card you want to move it to and press the spacebar key to move it there, if it can.</p>
+    <p><strong>How to move a card:</strong> Select a card and it will have a red border around it. Select the card you want to move it on top of, and it will move there if it can.</p>
     <p><strong>Point system:</strong> You start with 10 points. Minus 1 every time you turn over the next pile in the deck. Plus 5 every time you make a correct move.</p>
 
     <!-- Do not delete this script tag, this is what connects your HTML with the Javascript code -->
