added note on site development

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
   </head>
   <body class="bg-success">
     <h1 class="pt-5 text-center text-light">Random Two-Row Solitaire</h1>
+    <h2 class="site-info bg-warning-subtle">ℹ️ This site is under ongoing development. The game mechanic will not work yet.</h2>
     <h2><strong>Click the face-down pile to draw</strong> a card.</h2>
     <h2><strong>Click a card to select</strong> it.</h2>
     <h2><strong>Click another card</strong> to move the first card there.</h2>
